[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/justinrubek/lockpad"
license = "MIT"
repository = "https://github.com/justinrubek/lockpad"
version = "0.3.0"

[workspace.dependencies]
anyhow = "1.0.68"
axum = "0.7"
axum-extra = "0.9"
serde_json = "1.0.87"
thiserror = "1.0.38"
tracing = "0.1.37"

[workspace.dependencies.jsonwebtoken]
version = "8.2.0"
features = ["use_pem"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.dependencies.ulid]
version = "1.0.0"
features = ["serde"]

[profile.release.package]
