[package]
name = "lockpad"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "lockpad-cli"
path = "src/main.rs"

[dependencies]
config = "0.13.3"
# clap = { version = "4.0.19", features = ["derive"] }
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
lockpad-auth = { path = "../auth" }
lockpad-http = { path = "../http" }
lockpad-models = { path = "../models" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
clap = { version = "4.1.6", features = ["derive"] }
jsonwebtoken.workspace = true
rsa = "0.8.2"
rand = "0.8.5"
sqlx = "0.6.3"
