[package]
name = "lockpad-http"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum.workspace = true
aws-sdk-dynamodb = { workspace = true }
dioxus = { version = "0.5.1", features = ["dioxus-ssr"] }
dioxus-ssr = "0.5.1"
hyper = "1.0"
jsonwebtoken = { workspace = true }
lockpad-models = { path = "../models" }
lockpad-auth = { path = "../auth" }
lockpad-ulid = { path = "../ulid" }
serde = { workspace = true }
serde_dynamo = { workspace = true }
serde_json = "1.0.87"
scylla-dynamodb = { path = "../scylla-dynamodb" }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = { workspace = true }
argon2 = { version = "0.4.1", features = ["std"] }
base64 = "0.21.0"
sqlx = "0.6.3"
validator = { version = "0.16.0", features = ["derive"] }
async-trait = "0.1.79"
