[package]
name = "lockpad-models"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
lockpad-derive = { path = "../derive" }
serde = { workspace = true }
serde_dynamo = { workspace = true }
scylla-dynamodb = { path = "../scylla-dynamodb" }
# serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
