[package]
name = "lockpad-models"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
# serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lockpad-ulid = { path = "../ulid" }
sqlx = { version = "0.6.3", features = ["offline", "runtime-tokio-rustls", "postgres", "time", "macros", "uuid"] }
serde_json.workspace = true
