[package]
name = "scylla-dynamodb"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
aws-credential-types = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
serde = { workspace = true }
serde_dynamo = { workspace = true, features = ["aws-sdk-dynamodb+0_24"] }
thiserror = { workspace = true }
tracing.workspace = true
ulid.workspace = true
