[package]
name = "lockpad-ulid"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
rusty_ulid = { version = "2.0.0", features = ["chrono", "rand", "serde"], default-features = false }
sqlx = { workspace = true }
serde.workspace = true
# serde_json = "1.0.87"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
